# open-mp-federated-learning

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  dataset_gen.cpp  docker-compose.yaml  inference.cpp  inference_model.cpp  master.cpp  shared.h  worker.cpp
instructions/: README.md
